--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jest": "^25.2.7",
     "next": "^9.3.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
