--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "prod": "next export",
     "start": "next start",
+    "lint": "eslint ./components/**/*.js ./components/**/*.jsx ./data/**/*.js ./pages/**/*.js ./styles/**/*.js",
     "test": "jest --watch",
     "coverage": "jest --coverage"
   },
@@ -28,6 +30,8 @@
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.2",
     "babel-jest": "^25.2.6",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2"
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0"
   }
 }
