--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prod": "next export",
     "start": "next start",
     "lint": "eslint ./components/**/*.js ./components/**/*.jsx ./data/**/*.js ./pages/**/*.js ./styles/**/*.js",
-    "test": "jest --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "coverage": "jest --coverage"
   },
   "keywords": [],
